# personal-web

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs
src/routes/: errors.rs  get.rs  mod.rs  static_files.rs
static/: index.html  main.js
templates/: main.html.tera  not-found.html.tera
templates/errors/: not-found.html.tera
