[package]
name = "personal-web"
version = "0.1.0"
authors = ["Omar Jair Purata Funes <omarpurataf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
tera = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates"]

# template and markdown
tera = "1.0.0"
